--- a/enderecocep/src/main/resources/application.properties
+++ b/enderecocep/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=enderecocep
+
+#conectar a url
+spring.datasource.url=jdbc:h2:mem:db_api_endereco
+
+#Driver
+spring.datasource.driverClassName=org.h2.Driver
+
+#Colocar o nome do usuario
+spring.datasource.username=admin
+
+#Colocar a senha do banco de dados
+spring.datasource.password=admin
+
+#Console do h2
+spring.h2.console.enabled=true
+
+#Mapeamento
+spring.jpa.hibernate.ddl-auto=update
