--- a/enderecocep/src/main/resources/application.properties
+++ b/enderecocep/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 
 #Colocar a senha do banco de dados
-spring.datasource.password=admin
+spring.datasource.password=
 
 #Console do h2
 spring.h2.console.enabled=true
